styles/styles.css
/* css reset */
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

/* ! ****************************** */
/* ! CUSTOM PROPERITES ************ */
/* ! ****************************** */
:root{
    /* colors */
    --btn-color: #6ecc84;
    --green-bg-color: #bed5c4;
    --footer-clor: #264e32;

    /* layout */
    --header-height: 100px;
    --footer-height: 65px;
    --navbar-width: 270px;
}

/* ! ****************************** */
/* ! GENERALS ********************* */
/* ! ****************************** */
html{
    -webkit-tap-highlight-color: transparent;
    /* scroll-behavior: smooth; */
}

body{
    font-family: 'Roboto', sans-serif;
}

.container{
    max-width: 550px;
    margin: 0 auto;
    height: 100%;
}

a{
    color: black;
}

h1{
    color: var(--footer-clor);
    font-size: 2.5rem;
    margin-bottom: 20px;
    text-shadow: 1px 1px 1px darkgreen;
}

h2{
    font-size: 1.8rem;
    margin-bottom: 20px;
}

h3{
    color: var(--btn-color);
    font-size: 1.2rem;
    margin-bottom: 10px;
    text-transform: uppercase;
}

h4{
    color: var(--btn-color);
    font-size: 1.2rem;
    margin-bottom: 20px;
}


p{
    line-height: 1.5;
}

.btn{
    display: inline-block;
    padding: 17px 32px;
    background-color: var(--btn-color);
    
    font-size: 13px;
    font-weight: bold;
    color: white;

    letter-spacing: 1px;
    text-transform: uppercase;

    transition: background-color 300ms;
}

.btn:hover{
    background-color: var(--footer-clor);
}

/* ! ****************************** */
/* ! HEADER *********************** */
/* ! ****************************** */
#top-nav{
    height: var(--header-height);
    background-color: #fff;

    position: sticky;
    top: 0;
    left: 0;
    z-index: 1;

    box-shadow: 0 0 2px black;
}

#top-nav .container{
    height: 100%;
}

#hdr-logo img{
    max-width: 75%;
    max-height: var(--header-height);
}

/* # NAVBAR */
#main-navbar{
    position: absolute;
    top: calc(var(--header-height) + 1px);
    left: calc(var(--navbar-width) * -1);

    width: var(--navbar-width);
    height: calc(100vh - var(--header-height));
    background-color: white;
    box-shadow: 0 0 2px gray;

    padding: 50px 20px;

    transition: left 300ms;
}

#main-navbar li a{
    display: block;
    font-weight: bold;
    padding: 20px 0;
    
    border-bottom: 1px solid lightgray;
    color: black;

    transition: color 300ms;
}

#main-navbar li a.active{
    color: var(--btn-color);
}

#main-navbar li a:hover{
    color: var(--btn-color);
}

/* ! ****************************** */
/* ! MAIN ************************* */
/* ! ****************************** */
section{
    min-height: 100px;
    scroll-margin-top: var(--header-height);
    padding: 60px 20px;

    z-index: 0;
    position: relative;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    position: relative;
}

section::before{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: var(--green-bg-color);
    opacity: .95;
    z-index: -1;
}

/* # HERO */
#hero{
    box-shadow: inset 0 0 100px 150px var(--green-bg-color);
    background-image: url(../img/test.jpg);
    padding-bottom: 150px;
}

#hero::before{
    content: '';    
    background-color: var(--green-bg-color);
}

#hero img{
    box-shadow: 20px 20px 5px gray;
}

#hero h5{
    text-shadow: 1px 1px 1px darkgreen;
}

/* # CHI SONO */

/* # COSA ASPETTARSI */
#cosa-aspettarsi{
    box-shadow: inset 0 0 100px 150px lightgray;
    background-image: url(../img/test.jpg);
 
}

#cosa-aspettarsi::before{
    content: '';
    background-color: #eee;
}

#cosa-aspettarsi figure{
    padding: 25%;
}

/* # DI COSA MI OCCUPO */
#di-cosa-mi-occupo{
    background-color: var(--green-bg-color);
}

#di-cosa-mi-occupo .col{
    flex-basis: 100%;
    background-color: white;
}

#di-cosa-mi-occupo .col-text{
    padding: 2rem 1rem;
}

#di-cosa-mi-occupo .col-text p{
    font-size: .9rem;
}

#di-cosa-mi-occupo .btn{
    margin: 0 auto;
}

/* # CONTATTAMI */
#contattami li{
    margin-bottom: 30px;
    line-height: 1.5rem;
}

#contattami .fa-li{
    color: var(--btn-color);
    font-size: 1.5rem;
}

/* * contattami form */
#contattami .d-flex{
    display: block;
}

#contattami .form-card{
    background-color: var(--green-bg-color);
    padding: 2rem 1rem; 
    border-radius: 2rem;
    box-shadow: 2px 2px 5px gray;
}

#contattami label{
    display: block;
}

#contattami .clients-data{
    display: block;
    width: 100%;
    margin: 10px 0;
    height: 2rem;
    padding: 1rem;
    outline: none;
    border-radius: .5rem;
    border: 1px solid gray;
}

.form-card #norm-cb{
    cursor: pointer;
}

textarea#message{
    outline: none;
    width: 100%;
    resize: none;
    background-color: white;
    z-index: 0;
    border-radius: .5rem;
    
    padding: 1rem;
    font-family: 'Roboto', sans-serif;
}

.form-card .btn{
    width: 100%;
    border: none;
    cursor: pointer;    
}

.iubenda-link{
    display: inline-block;
    color: gray;
    transition: color 300ms
}

.iubenda-link:hover{
    color: orange;
}

label[for="miele-cb"]{
    visibility: hidden;
    display: none;
}

/* # RISPOSTA */
.response{
    padding: 20px;
    border-width: 1px;
    border-style: solid;
    border-radius: 15px;
    font-weight: bold;

    transition: opacity 300ms;
}

.response::before{
    font: var(--fa-font-solid);
    padding-right: 1rem;
}

.response .fa-xmark{
    cursor: pointer;
    margin-left: auto;
}

.response.success{
    color: #0a3622;
    border-color: #a9d2bf;
    background-color: #d1e7dd;
}

.response.success::before{
    content: '\f058';
}

.response.bad{
    color: #664d03;
    border-color: #ffecb2;
    background-color: #fff3cd;
}

.response.bad::before{
    content: '\f06a';
}

/* # CONTATTI */
#contatti{
    background-color: var(--green-bg-color);
}

#contatti img{
    width: 75%;    
}

#contatti > .col-50:first-child{
    align-self: flex-start;
}

#contatti address{
    font-style: normal;
}

#contatti h4{
    display: inline-block;
    color: var(--footer-clor);
    border-bottom: 2px solid var(--btn-color);
    padding-bottom: 1rem;
    margin-bottom: 2rem;
}

#contatti address i{
    color: var(--btn-color);
}

#contatti li{
    margin-bottom: 1rem;
}


/* ! ****************************** */
/* ! FOOTER *********************** */
/* ! ****************************** */
footer{
    height: var(--footer-height);
    background-color: var(--footer-clor);
    color: white;

    padding: 20px;
}

/* ! ****************************** */
/* ! RESPONSIVE ******************* */
/* ! ****************************** */
/* # tablet */
@media screen and (min-width: 768px) {
    .container{
        max-width: 980px;
    }
    
    #di-cosa-mi-occupo .col{
        flex-basis: calc((100% - 40px) / 2);
    }
}

/* # desktop */
@media screen and (min-width: 992px) {
    .container{
        max-width: 1080px;
    }
    
    #top-nav .container,
    footer .container{
        max-width: 1400px;
    }
    
    #top-nav{
        padding: 0;
    }
    
    /* * navbar switch */
    #hamburger-menu{
        display: none;
    }
    
    #main-navbar{
        position: static;
        width: auto;
        height: auto;
        box-shadow: none;
        padding: 0;
    }
    
    #main-navbar ul{
        display: flex;
    }
    
    #main-navbar li a{
        padding: 20px;
        border: none;
    }
    
    /* # HERO */
    #hero .container{
        display: flex;
        gap: 50px;
    }
    
    /* # DI COSA MI OCCUPO */
    #di-cosa-mi-occupo .col{
        flex-basis: calc((100% - 40px) / 3);
    }

    /* # CONTATTAMI */
    #contattami .d-flex{
        display: flex;
    }
    
    
}

